--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+PyRSS2Gen==1.1
+aiodns==3.0.0
 aiohttp==3.8.1
 aiosqlite==0.17.0
 black==21.12b0
-fastapi==0.71.0
-pytest==6.2.5
-feedparser==6.0.8
 cchardet==2.1.7
-aiodns==3.0.0
+fastapi==0.71.0
+feedparser==6.0.8
+pytest==6.2.5
+uvicorn==0.17.0
