--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ black==21.12b0
 cchardet==2.1.7
 fastapi==0.71.0
 feedparser==6.0.8
+pandas==1.4.0
 pytest==6.2.5
+scikit-learn==1.0.2
 uvicorn==0.17.0
